--- a/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_normal.xml
+++ b/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_normal.xml
@@ -5,7 +5,7 @@
     <!--    android:shape="oval"-->
 
     <!--    进度条圆点常规状态颜色-->
-    <solid android:color="@color/color_02F8E1" />
+<!--    <solid android:color="@color/color_02F8E1" />-->
 <!--    <solid android:color="@color/color_CC0889B8" />-->
     <solid android:color="@color/color_FF0057" />
 <!--    <size-->
