--- a/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_press.xml
+++ b/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_press.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-<!--    进度条圆点按压状态颜色-->
-<!--    <solid android:color="@color/color_03DAC5" />-->
+    android:shape="rectangle">
     <solid android:color="#3F51B5" />
+    <!--    <solid android:color="@color/color_03DAC5" />-->
     <size
-        android:width="@dimen/vs_8"
-        android:height="@dimen/vs_8" />
+        android:width="@dimen/vs_3"
+        android:height="@dimen/vs_6" />
 </shape>
