--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="left|center_vertical"
-            android:text="@string/app_name"
+            android:text=""
             android:textAlignment="gravity"
             android:textColor="@android:color/white"
             android:textSize="@dimen/ts_30"
@@ -44,7 +44,7 @@
             android:textAlignment="gravity"
             android:textColor="@android:color/white"
             android:textSize="@dimen/ts_28"
-            tools:text="111111111111111" />
+            tools:text="" />
     </LinearLayout>
 
     <LinearLayout
