--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tv_top_l_container"
         android:layout_width="720dp"
         android:layout_height="wrap_content"
+        android:gravity="top|left"
         android:layout_marginStart="@dimen/vs_0"
         android:layout_marginLeft="@dimen/vs_0"
         android:layout_marginTop="@dimen/vs_0"
@@ -18,32 +19,55 @@
         android:visibility="gone"
         tools:visibility="visible">
 
-        <TextView
+<!--        <TextView-->
+<!--            android:id="@+id/tv_info_name1"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="top"-->
+<!--            android:gravity="top"-->
+<!--            android:width="480dp"-->
+<!--            android:ellipsize="end"-->
+<!--            android:layout_marginTop="@dimen/vs_0"-->
+<!--            android:padding="@dimen/vs_0"-->
+<!--            android:layout_margin="@dimen/vs_0"-->
+<!--            android:singleLine="true"-->
+<!--            android:text="http://"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:textSize="@dimen/vs_22" />-->
+
+        <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
             android:id="@+id/tv_info_name1"
-            android:layout_width="wrap_content"
+            android:layout_width="120px"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0mm"
             android:layout_gravity="left"
-            android:width="480dp"
-            android:ellipsize="end"
-            android:paddingLeft="@dimen/vs_2"
-            android:paddingTop="@dimen/vs_0"
+            android:ellipsize="marquee"
+            android:gravity="left"
+            android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:text="http://"
-            android:textColor="@android:color/white"
+            android:text=".."
+            android:textColor="#FFFCFFFF"
+            android:shadowColor="#EF000000"
+            android:textStyle="bold"
+            android:shadowDx="-1"
+            android:shadowDy="-1"
+            android:shadowRadius="1"
             android:textSize="@dimen/vs_22" />
 
         <TextView
             android:id="@+id/tv_videosize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="top"
+            android:gravity="top"
             android:ellipsize="end"
             android:maxLines="1"
+            android:layout_margin="@dimen/vs_0"
             android:paddingLeft="@dimen/vs_20"
             android:tag="vod_video_size"
             android:text="[ w x h ]"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_20" />
+            android:textSize="@dimen/ts_16" />
 
     </LinearLayout>
 
@@ -509,10 +533,11 @@
         android:visibility="gone"
         tools:text="100" />
 
+
     <LinearLayout
         android:id="@+id/tv_progress_container"
-        android:layout_width="@dimen/vs_280"
-        android:layout_height="@dimen/vs_220"
+        android:layout_width="@dimen/vs_420"
+        android:layout_height="@dimen/vs_320"
         android:layout_gravity="center"
         android:background="@drawable/shape_user_focus"
         android:focusable="false"
@@ -521,7 +546,6 @@
         android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible">
-
         <FrameLayout
             android:id="@+id/tv_pause_container"
             android:layout_width="match_parent"
@@ -554,10 +578,9 @@
             <!--            </LinearLayout>-->
 
             <LinearLayout
-                android:layout_width="@dimen/vs_280"
-                android:layout_height="@dimen/vs_200"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/shape_user_focus"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:layout_marginTop="@dimen/vs_20"
@@ -582,7 +605,7 @@
                     android:focusableInTouchMode="false"
                     android:tag="vod_control_pause_t"
                     android:textColor="@android:color/white"
-                    android:textSize="@dimen/ts_30"
+                    android:textSize="@dimen/ts_40"
                     tools:text="0:0/0:0" />
             </LinearLayout>
 
@@ -590,8 +613,8 @@
 
         <ImageView
             android:id="@+id/tv_progress_icon"
-            android:layout_width="@dimen/vs_60"
-            android:layout_height="@dimen/vs_60"
+            android:layout_width="@dimen/vs_80"
+            android:layout_height="@dimen/vs_80"
             android:focusable="false"
             android:focusableInTouchMode="false"
             tools:src="@drawable/icon_back" />
@@ -605,7 +628,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/ts_30"
+            android:textSize="@dimen/ts_40"
             tools:text="100" />
 
     </LinearLayout>
@@ -656,5 +679,22 @@
         android:src="@drawable/icon_unlock"
         android:visibility="invisible" />
 
+
+    <TextView
+        android:id="@+id/video_name_large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="@dimen/vs_40"
+        android:background="@drawable/shape_user_focus"
+        android:gravity="top|center"
+        android:paddingLeft="@dimen/vs_30"
+        android:paddingTop="@dimen/vs_20"
+        android:paddingRight="@dimen/vs_30"
+        android:paddingBottom="@dimen/vs_20"
+        android:text=""
+        android:textColor="@color/color_FFFFFF"
+        android:textSize="60mm"
+        android:visibility="gone"></TextView>
 <!--    // ?-->
 </FrameLayout>
